# landscaping-copilot

./: .gitignore  01-scope-v1.md  02-non-functionals.md  README.md
adr/: 0001-orchestration-choice.md
architecture/: containers.mmd
docs/: .pre-commit-config.yaml  LEARNINGS.md  docker-compose.yml  pyproject.toml
docs/adr/: 0000-template.md
docs/architecture/: data-flow.mmd
docs/contracts/: site_model.py  test_site_model.py
docs/src/copilot/: main.py
