[project]
name = "landscaping-copilot"
version = "0.1.0"
description = "Spatially-grounded AI landscaping copilot — not a GPT wrapper."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]